--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="user_tag">Usuario: </string>
+    <string name="pass_tag">Contraseña: </string>
+    <string name="aceptar">Aceptar</string>
 </resources>
