--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="user_tag">Usuario: </string>
     <string name="pass_tag">Contraseña: </string>
     <string name="aceptar">Aceptar</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
