--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="cochera_tag">Cochera:  </string>
     <string name="ventana_sala_tag">Ventana Sala:  </string>
     <string name="ventana_hab1_tag">Ventana habitación 1:  </string>
-    <string name="ventana_hab2_tag">Ventana habitaación 2:  </string>
+    <string name="ventana_hab2_tag">Ventana habitación 2:  </string>
     <string name="desact_tag">Desactivar</string>
     <string name="sensor_amb">Sensor luz ambiental</string>
 </resources>
