--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
         <item>Habitación 1</item>
         <item>Habitación 2</item>
         <item>Alarmas</item>
+        <item>Cerrar Sesión</item>
     </string-array>
     <string name="drawer_open">Abrir navigation drawer</string>
     <string name="drawer_close">Cerrar navigation drawer</string>
